2005-06-10  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-hppa.c (pa_block): Allocate just one byte for the
	fill pattern.

2005-06-08  James E Wilson  <wilson@specifixinc.com>

	PR 994
	* config/tc-ia64.c (slot_index): Revert last change.  If first_frag
	is NULL, then emit a warning, and return the current index.

2005-06-08  Tomas Hurka  <tom@hukatronic.cz>

	PR 991
	* config/tc-m68k.c (m68k_ip): Test for insn compatiblity using a
	temporary copy of the operands array so that changes can be safely
	backed out if the insn does not match.
	(m68k_compare_opcode): Shortcut the test when the parameters are
	the same.  Return 1 if the names match but the second opcode is
	further on in the array than the first.

2005-06-08  Nick Clifton  <nickc@redhat.com>

	PR 994
	* config/tc-ia64.c (slot_index): Check for a NULL first_frag.

2005-06-08  Kazuhiro Inaoka <inaoka.kazuhiro@renesas.com>

	* config/tc-m32r.c (use_parallel): Change default value from 1 to 0.

2005-06-07  Aldy Hernandez  <aldyh@redhat.com>
	    Michael Snyder  <msnyder@redhat.com>
	    Stan Cox  <scox@redhat.com>

	* configure.in: Add ms1 case.

	* configure: Regenerate.

	* configure.tgt: Add ms1 case.

2005-06-07  Bob Wilson  <bob.wilson@acm.org>

	* config/tc-xtensa.h (resource_table): Change units to unsigned chars.
	* config/tc-xtensa.c (new_resource_table): Likewise.
	(resize_resource_table): Likewise.
	(release_resources): Fix assertion for unsigned values.

2005-06-07  Zack Weinberg  <zack@codesourcery.com>

	* cgen.c, cgen.h, tc.h, write.c, config/obj-coff.c
	* config/tc-a29k.c, config/tc-alpha.c, config/tc-alpha.h
	* config/tc-arc.c, config/tc-arc.h, config/tc-arm.c
	* config/tc-arm.h, config/tc-avr.c, config/tc-avr.h
	* config/tc-cris.c, config/tc-crx.c, config/tc-d10v.c
	* config/tc-d10v.h, config/tc-d30v.c, config/tc-d30v.h
	* config/tc-dlx.c, config/tc-dlx.h, config/tc-fr30.h
	* config/tc-frv.c, config/tc-frv.h, config/tc-h8300.c
	* config/tc-h8500.c, config/tc-hppa.c, config/tc-hppa.h